# weather-rs

./: Cargo.toml  README.md  coordinates.txt  endpoint.json  forecast.json  observation.json  points_sample.json  stations_sample.json
src/: lib.rs  main.rs  weather_data.rs  zip_data.txt
